# Whitespace

./: .clang-format  CMakeLists.txt  Logo_Krome.txt  Main.c  README.md  run_cmake.sh  test.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: developer.h  developer_group.h
src/: developer.c  developer_group.c  main.c
